# homework_reminder

./: README.en-US.md  README.md
back/: README.md  pyproject.toml  requirements.txt
back/config/: settings.py
back/homeworks/: apps.py
back/homeworks/migrations/: 0001_initial.py  0002_rename_materia_tarefa_homework_materia_trabalho_and_more.py  0003_alter_homework_anotacoes_alter_homework_data_entrega_and_more.py
back/homeworks/models/: homework.py
back/users/migrations/: 0001_initial.py
back/users/models/: users.py
front/src/: App.vue
front/src/components/: Header.vue
front/src/router/: index.js
